--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,13 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/userName"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Enter User Name"
-        android:id="@+id/userName"
-        android:layout_centerInParent="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="149dp"
+        android:hint="Enter User Name" />
     
     <Button
         android:layout_width="match_parent"
